Replace deprecated numeric constructors with factory valueOf()